# CodeY

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test-github-integration.md  vitest.config.ts
.claude/skills/codey-brainstorming/: README.md  SKILL.md
.claude/skills/codey-code-standards/: README.md  SKILL.md
.claude/skills/codey-dev-workflow/: README.md  SKILL.md
.claude/skills/codey-frontend-style/: README.md  SKILL.md
.claude/skills/codey-testing-standards/: README.md  SKILL.md
.claude/skills/doc-maintainer/: README.md  SKILL.md
.claude/skills/github-integration/: README.md  SKILL.md
.claude/skills/llm-provider-maintenance/: README.md  SKILL.md
.claude/skills/protocol-maintainer/: README.md  SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.serena/: project.yml
crates/codey-core/: Cargo.toml
crates/codey-core/src/: lib.rs
crates/codey-core/src/agent/: context.rs  loop.rs  mod.rs  stream.rs  types.rs
crates/codey-core/src/llm/: anthropic.rs  db_loader.rs  mod.rs  ollama.rs  openai.rs  provider.rs  registry.rs
crates/codey-core/src/permission/: engine.rs  mod.rs  rules.rs  sandbox.rs  tests.rs
crates/codey-core/src/protocol/: events.rs  jsonrpc.rs  mod.rs  types.rs
crates/codey-core/src/sandbox/: bubblewrap.rs  config.rs  error.rs  manager.rs  mod.rs  seatbelt.rs  tests.rs
crates/codey-core/src/tools/: adapters.rs  file_executor.rs  file_ops.rs  git.rs  mcp.rs  mod.rs  orchestrator.rs  registry.rs  shell.rs  shell_executor.rs  web.rs
crates/codey-core/src/tools/agent_handler/: mod.rs  tests.rs
crates/codey-core/src/tools/file_handler/: mod.rs  tests.rs
crates/codey-core/src/tools/shell_handler/: mod.rs  tests.rs
crates/codey-server/: Cargo.toml
crates/codey-server/src/: main.rs  state.rs
crates/codey-server/src/routes/: agent.rs  mod.rs  ws.rs
crates/codey-tauri/: Cargo.toml  tauri.conf.json
crates/codey-tauri/src/: main.rs  state.rs
crates/codey-tauri/src/commands/: agent.rs  config.rs  file.rs  mod.rs
docs/: progress.md
docs/2026-07-05/: architecture.md  complete-design-decisions.md  design-decisions.md  harness-vs-sdd.md  permission-model.md  phase1-code-review.md  protocol-design-blog.md  protocol-design.md
docs/blog/: [Blog] 2026-07-05-agent-loop.md  [Blog] 2026-07-05-llm-integration.md  [Blog] 2026-07-05-permission-system.md  [Blog] 2026-07-05-phase2.5-integration.md  [Blog] 2026-07-05-phase3-frontend-ui-planning.md  [Blog] 2026-07-05-phase3.1-layout-implementation.md  [Blog] 2026-07-05-phase3.2-conversation-ui.md  [Blog] 2026-07-05-windows-sandbox-analysis.md
docs/research/: windows-sandbox-analysis.md
docs/specs/2026-07-05-phase1-protocol/: api.md  design.md  test.md
docs/specs/2026-07-05-phase2-agent-loop/: api.md  design.md  test.md
docs/specs/2026-07-05-phase2-integration/: api.md  design.md  test.md
docs/specs/2026-07-05-phase2-llm-provider/: api.md  design.md  test.md
docs/specs/2026-07-05-phase2-permission/: api.md  design.md  test.md
docs/specs/2026-07-05-phase2-sandbox/: api.md  design.md  test.md
docs/specs/2026-07-05-phase3.1-layout/: api.md  design.md  test.md
docs/specs/2026-07-05-phase3.2-conversation-ui/: api.md  design.md  test.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: index.ts
src/components/chat/: BranchIndicator.tsx  BranchNavigator.tsx  ChatInput.tsx  ChatPanel.tsx  EmptyState.tsx  MessageBubble.tsx  MessageContent.tsx  MessageList.tsx  SessionItem.tsx  SessionSearch.tsx  SessionSidebar.tsx  StreamIndicator.tsx  ToolCallCard.tsx  ToolCallList.tsx  index.ts
src/components/layout/: GridContainer.tsx  PanelHeader.tsx  PanelSlot.tsx  ResizeHandle.tsx  index.ts
src/hooks/: index.ts  useAutoScroll.ts  useChat.ts  useGridLayout.ts  useLayoutMode.ts  useLayoutPreset.ts  usePanelDrag.ts  usePanelState.ts  usePanelVisibility.ts  useSession.ts  useStreamListener.ts  useStreaming.ts
src/stores/: chatStore.ts  index.ts  layoutStore.ts  presets.ts
src/styles/: index.css
src/types/: chat.ts  grid.ts  index.ts  layout.ts
(+158 files in other folders)
