[workspace]
resolver = "2"
members = [
    "crates/codey-core",
    "crates/codey-tauri",
    "crates/codey-server",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/your-username/CodeY"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async streams
futures = "0.3"
bytes = "1"

# Web framework (for codey-server)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Tauri (for codey-tauri)
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# LLM
async-openai = "0.28"
async-anthropic = "0.4"

# UUID
uuid = { version = "1", features = ["v4"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Testing
tempfile = "3"
mockall = "0.13"
