[package]
name = "codey-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core logic for CodeY agent"

[dependencies]
# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# HTTP
reqwest.workspace = true

# Async streams
futures.workspace = true
bytes.workspace = true

# Async trait
async-trait = "0.1"

# UUID
uuid.workspace = true

# LLM
async-openai.workspace = true
async-anthropic.workspace = true

# Database
rusqlite.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
mockall.workspace = true
