[package]
name = "codey-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web server for CodeY"

[dependencies]
# Workspace
codey-core = { path = "../codey-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# HTTP
reqwest.workspace = true
